fix safari flicker and extend wire length

--- a/styles.css
+++ b/styles.css
@@ -314,6 +314,7 @@ i {
 
 	-webkit-animation-name: bitmove; /* Chrome, Safari, Opera */
     -webkit-animation-duration: 3s; /* Chrome, Safari, Opera */
+    -webkit-backface-visibility: hidden;
     animation-name: bitmove;
     animation-duration: 3s;
     animation-iteration-count: infinite;
